updates to js file

--- a/templates/tweetTemplate.handlebars
+++ b/templates/tweetTemplate.handlebars
@@ -1,7 +1,8 @@
-<div class="tweet">
+<div class="tweet" id="tweet-{{id}}">
 	<img src="{{img}}">
 	<div class="body">
 		<div class="title">{{handle}}</div>
 		<div class="message">{{message}}</div>
+		<div class="wtf">{{userId}}</div>
 	</div>
 </div>
