changes to db and minor bug fixes

--- a/templates/composeTemplate.handlebars
+++ b/templates/composeTemplate.handlebars
@@ -1,7 +1,7 @@
 <form class="compose">
-	<textarea placeholder="Compose new Tweet..."></textarea>
-	<div>
-		<span class="count">140</span>
-		<button>send</button>
-	</div>
+    <textarea placeholder="Compose new Tweet..."></textarea>
+    <div>
+        <span class="count" attr="140">140</span>
+        <button>Send</button>
+    </div>
 </form>
