--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ button {
 
 .compose textarea {
 	border-radius: 3px;
-	background-color: #fff;
+	background-color: #FFF;
 	border: 1px solid #C0E1ED;
 	display: block;
 	width: 100%;
@@ -90,7 +90,7 @@ button {
 	float: left;
 	width: 60px;
 	height: 60px;
-	background-color: #eee;
+	background-color: #EEE;
 	border-radius: 4px;
 }
 
@@ -132,7 +132,7 @@ header {
 
 #tweets {
 	margin-top: 10px;
-	background-color: #fff;
+	background-color: #FFF;
 	border: 1px solid #C0E1ED;
 	border-radius: 10px;
 	overflow: hidden;
