--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ section #main {
 }
 
 header {
-	margin-top: 20px;
+	margin-top: 1.2rem;
 	background-color: #E5F2F7;
 	border: 1px solid #C0E1ED;
 	border-radius: 10px;
